Updated highlight.js to 10.1.1 and implement faster parsed markdown html reload

--- a/src/main/resources/com/github/hinaser/gfma/html/markdown.html
+++ b/src/main/resources/com/github/hinaser/gfma/html/markdown.html
@@ -33,7 +33,7 @@
     </style>
     <link rel="stylesheet"
           href="{highlight.github.css}"/>
-    <script src="{highlight.pack.js}"></script>
+    <script src="{highlight.min.js}"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
