Shows popup for x-ratelimit paramater confirmation

--- a/src/main/resources/com/github/hinaser/gfma/html/markdown.html
+++ b/src/main/resources/com/github/hinaser/gfma/html/markdown.html
@@ -86,7 +86,9 @@
               <span id="title">{0}</span>
               <span class="gfmA-separator"></span>
               <span id="gfmA-parsed-by">Parser:</span>
-              <span id="gfmA-parser">{parser}</span>
+              <span id="gfmA-parser" title="{rateLimit}">
+                {parser}
+              </span>
               <span id="gfmA-access-token" data-gfmaparser="{parser}">
                 <span data-gfmaverified="{verified}" data-forvalidtoken="true">
                   <svg aria-hidden="true" class="octicon" height="16" version="1.1" viewBox="0 0 24 24" width="16">
