--- a/src/main/resources/com/github/hinaser/gfma/html/markdown.html
+++ b/src/main/resources/com/github/hinaser/gfma/html/markdown.html
@@ -27,6 +27,12 @@
     .repository-with-sidebar.with-full-navigation .repository-content {
       width: {width};
     }
+    #gfmA-show-active-parser {
+      display: none;
+    }
+    #gfmA-show-active-parser[data-show='true'] {
+      display: inline-block;
+    }
     .gfmA-separator {
       display: inline-block;
       width: 1px;
@@ -84,29 +90,31 @@
                 <path d="M3 5h4v1H3V5zm0 3h4V7H3v1zm0 2h4V9H3v1zm11-5h-4v1h4V5zm0 2h-4v1h4V7zm0 2h-4v1h4V9zm2-6v9c0 .55-.45 1-1 1H9.5l-1 1-1-1H2c-.55 0-1-.45-1-1V3c0-.55.45-1 1-1h5.5l1 1 1-1H15c.55 0 1 .45 1 1zm-8 .5L7.5 3H2v9h6V3.5zm7-.5H9.5l-.5.5V12h6V3z"></path>
               </svg>
               <span id="title">{0}</span>
-              <span class="gfmA-separator"></span>
-              <span id="gfmA-parsed-by">Parser:</span>
-              <span id="gfmA-parser" title="{rateLimit}">
-                {parser}
-              </span>
-              <span id="gfmA-access-token" data-gfmaparser="{parser}">
-                <span data-gfmaverified="{verified}" data-forvalidtoken="true">
-                  <svg aria-hidden="true" class="octicon" height="16" version="1.1" viewBox="0 0 24 24" width="16">
-                    <g><rect fill="none" height="24" width="24"/></g><g><path d="M23,12l-2.44-2.79l0.34-3.69l-3.61-0.82L15.4,1.5L12,2.96L8.6,1.5L6.71,4.69L3.1,5.5L3.44,9.2L1,12l2.44,2.79l-0.34,3.7 l3.61,0.82L8.6,22.5l3.4-1.47l3.4,1.46l1.89-3.19l3.61-0.82l-0.34-3.69L23,12z M10.09,16.72l-3.8-3.81l1.48-1.48l2.32,2.33 l5.85-5.87l1.48,1.48L10.09,16.72z"/></g>
-                  </svg>
-                  <span>Access token verified</span>
+              <span id="gfmA-show-active-parser" data-show="{showActiveParser}">
+                <span class="gfmA-separator"></span>
+                <span id="gfmA-parsed-by">Parser:</span>
+                <span id="gfmA-parser" title="{rateLimit}">
+                  {parser}
                 </span>
-                <span data-gfmaverified="{verified}" data-forvalidtoken="false">
-                  <svg aria-hidden="true" class="octicon octicon-book" height="16" version="1.1" viewBox="0 0 24 24" width="16">
-                    <path d="M0 0h24v24H0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>
-                  </svg>
-                  <span>Invalid Access token</span>
-                </span>
-                <span data-gfmaverified="{verified}" data-forvalidtoken="not-set" title="Without access token, Github Markdown API is restricted to 60 req/hour, so it will be soon depleted">
-                  <svg aria-hidden="true" class="octicon octicon-book" height="16" version="1.1" viewBox="0 0 24 24" width="16">
-                    <path d="M0 0h24v24H0z" fill="none"/><path d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"/>
-                  </svg>
-                  <span>Access token not set</span>
+                <span id="gfmA-access-token" data-gfmaparser="{parser}">
+                  <span data-gfmaverified="{verified}" data-forvalidtoken="true">
+                    <svg aria-hidden="true" class="octicon" height="16" version="1.1" viewBox="0 0 24 24" width="16">
+                      <g><rect fill="none" height="24" width="24"/></g><g><path d="M23,12l-2.44-2.79l0.34-3.69l-3.61-0.82L15.4,1.5L12,2.96L8.6,1.5L6.71,4.69L3.1,5.5L3.44,9.2L1,12l2.44,2.79l-0.34,3.7 l3.61,0.82L8.6,22.5l3.4-1.47l3.4,1.46l1.89-3.19l3.61-0.82l-0.34-3.69L23,12z M10.09,16.72l-3.8-3.81l1.48-1.48l2.32,2.33 l5.85-5.87l1.48,1.48L10.09,16.72z"/></g>
+                    </svg>
+                    <span>Access token verified</span>
+                  </span>
+                  <span data-gfmaverified="{verified}" data-forvalidtoken="false">
+                    <svg aria-hidden="true" class="octicon octicon-book" height="16" version="1.1" viewBox="0 0 24 24" width="16">
+                      <path d="M0 0h24v24H0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>
+                    </svg>
+                    <span>Invalid Access token</span>
+                  </span>
+                  <span data-gfmaverified="{verified}" data-forvalidtoken="not-set" title="Without access token, Github Markdown API is restricted to 60 req/hour, so it will be soon depleted">
+                    <svg aria-hidden="true" class="octicon octicon-book" height="16" version="1.1" viewBox="0 0 24 24" width="16">
+                      <path d="M0 0h24v24H0z" fill="none"/><path d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"/>
+                    </svg>
+                    <span>Access token not set</span>
+                  </span>
                 </span>
               </span>
             </h3>
