Fixed typos/wrong text

--- a/src/main/resources/com/github/hinaser/gfma/html/markdown.html
+++ b/src/main/resources/com/github/hinaser/gfma/html/markdown.html
@@ -50,7 +50,7 @@
     #gfmA-access-token {
       display: none;
     }
-    #gfmA-access-token[data-gfmaparser='Github Markdown API'] {
+    #gfmA-access-token[data-gfmaparser='GitHub Markdown API'] {
       display: inline-block;
     }
     [data-gfmaverified] {
@@ -117,7 +117,7 @@
                     </svg>
                     <span>Invalid Access token</span>
                   </span>
-                  <span data-gfmaverified="{verified}" data-forvalidtoken="not-set" title="Without access token, Github Markdown API is restricted to 60 req/hour, so it will be soon depleted">
+                  <span data-gfmaverified="{verified}" data-forvalidtoken="not-set" title="Without access token, GitHub Markdown API is restricted to 60 req/hour, so it will be soon depleted">
                     <svg aria-hidden="true" class="octicon octicon-book" height="16" version="1.1" viewBox="0 0 24 24" width="16">
                       <path d="M0 0h24v24H0z" fill="none"/><path d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"/>
                     </svg>
